work order look ok

--- a/work_order/templates/base_work_order.html
+++ b/work_order/templates/base_work_order.html
@@ -20,12 +20,9 @@
             <ul>
                 <li><a href="{% url 'home-cmms' %}">Home</a></li>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'work_order:home-work_order'%}">Work Order</a></li>   
-                    <li><a href="{% url 'utility:home-utility'%}">Utility</a></li>   
-                    <li><a href="{% url 'help:cmms'%}">Help</a></li>   
+                    <li><a href="{% url 'work_order:work_orders'%}">Work Order List</a></li>   
                     <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
                 {% else %}
-                    <li><a href="{% url 'help:cmms'%}">Help</a></li>   
                     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
                 {% endif %} 
                 {% if user.is_authenticated %}
@@ -34,13 +31,5 @@
             </ul>
         </div>
         <div>{% block content %}{% endblock %}</div>
-
-        <!---
-        <div class="footer">
-            {% if user.is_authenticated %}
-                User : {{ user.get_username }}
-            {% endif %} 
-        </div>          
-        -->
     </body>
 </html>
