--- a/templates/cmms_pon/base_cmms.html
+++ b/templates/cmms_pon/base_cmms.html
@@ -20,13 +20,17 @@
             <ul>
                 <li><a href="{% url 'home-cmms' %}">Home</a></li>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'work_order:home-work_order'%}">Work Order</a></li>   
-                    <li><a href="{% url 'utility:home-utility'%}">Utility</a></li>   
+                    <li><a href="{% url 'equipment:home'%}">Equipment</a></li>   
+                    <li><a href="{% url 'pm_pdm:home'%}">PM PdM</a></li>   
+                    <li><a href="{% url 'work_order:home'%}">Work Order</a></li>   
+                    <li><a href="{% url 'reporting:home'%}">Reporting</a></li>   
+                    <li><a href="{% url 'utility:home'%}">Utility</a></li>   
                     <li><a href="{% url 'help:cmms'%}">Help</a></li>   
                     <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
                 {% else %}
                     <li><a href="{% url 'help:cmms'%}">Help</a></li>   
                     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+                    <li style="float: right;"><a href="{% url 'signup' %}">Sign Up</a></li>   
                 {% endif %} 
                 {% if user.is_authenticated %}
                     <li style="float: right;">User : {{ user.get_username }}</li>
