--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,7 +1,5 @@
 <!-- templates/registration/signup.html -->
-{% extends 'base.html' %}
-
-{% block title %}Sign Up{% endblock %}
+{% extends "base_cmms.html" %}
 
 {% block content %}
 <h2>Sign Up</h2>
