housekeping for help and cmms_base

--- a/help/templates/help/PmPdm.html
+++ b/help/templates/help/PmPdm.html
@@ -1,10 +1,10 @@
-{% extends "base_cmms.html" %}
 
-{% block title %}
-    <title>CMMS - PM PdM</title>
-{% endblock %}
-{% block content %}
+{% extends "base_help.html" %}
+
+{% block title %}CMMS Help PM PdM{% endblock %}
+
+{% block body %}
   <!--get from help-->
   {% include 'help_PmPdm.html' %}
+{% endblock body %}
 
-{% endblock %}
