--- a/help/templates/help/cmms.html
+++ b/help/templates/help/cmms.html
@@ -1,10 +1,9 @@
-{% extends "base_cmms.html" %}
+{% extends "base_help.html" %}
 
-{% block title %}
-    <title>CMMS - PT. PON</title>
-{% endblock %}
-{% block content %}
+{% block title %}CMMS Help Home{% endblock %}
+
+{% block body %}
   <!--get from help-->
   {% include 'help_cmms.html' %}
+{% endblock body %}
 
-{% endblock %}
