--- a/help/templates/help/reporting.html
+++ b/help/templates/help/reporting.html
@@ -1,10 +1,10 @@
-{% extends "base_cmms.html" %}
 
-{% block title %}
-    <title>CMMS - Reporting</title>
-{% endblock %}
-{% block content %}
+{% extends "base_help.html" %}
+
+{% block title %}CMMS Help Reporting{% endblock %}
+
+{% block body %}
   <!--get from help-->
   {% include 'help_reporting.html' %}
+{% endblock body %}
 
-{% endblock %}
