--- a/help/templates/help/workOrder.html
+++ b/help/templates/help/workOrder.html
@@ -1,10 +1,9 @@
-{% extends "base_cmms.html" %}
+{% extends "base_help.html" %}
 
-{% block title %}
-    <title>CMMS - Work Order</title>
-{% endblock %}
-{% block content %}
+{% block title %}CMMS Help Work Order{% endblock %}
+
+{% block body %}
   <!--get from help-->
   {% include 'help_workOrder.html' %}
+{% endblock body %}
 
-{% endblock %}
