--- a/help/templates/help_PmPdm.html
+++ b/help/templates/help_PmPdm.html
@@ -1,50 +1,60 @@
-{% block content %}
-    <style>
-        ul {
-            padding: 0px 0px 0px 50px;
-        }
-    </style>
-
-    <div class="row">
-        <div class="column side">
-            <h2>Preventive and Predictive Maintenance</h2>
-            <p>Module yang menangani pekerjaan terencana (time based) </p>
-        </div>
-        
-        <div class="column middle">
-            <!--Pm Pdm Start-->
-            <h2>Preventive and Predictive Maintenance</h2>
-            <p>
-                Pekerjaan terencana baik berupa pencegahan, perbaikan/korektif, ataupun inspeksi berkala
-                merupakan bagian yang terpenting dari sebuah sisitem perawatan. Dengan tindakan ini tercegah
-                atau setidaknya mengurangi aset tidak berfungsi secara mendadak (break down). Penerapan pekerjaan
-                terencana berdasar pada resiko yang dipikul oleh masing-masing aset (risk based).
-                Aset yang mengakibatkan issue lingkungan, keselamatan serta keberlangsungan operasi bisnis harus
-                mendapatkan perlakukan yang berbeda.
-                Dalam module ini dilakukan beberapa fungsi sbb:
-            </p>
-            <ul>
-                <li>
-                    Set-up dan konfigurasi 
-                </li>
-                <li>
-                    Scheduling
-                </li>
-                <li>
-                    Automatic Work Order
-                </li>
-                <li>
-                    Action reporting
-                </li>
-            </ul>
-            <!--Pm Pdm End-->
-        </div>
-
-        <div class="column side">
-            <h2>PM PdM Modules</h2>
-            <p>
-                Setup dan konfigurasi pekerjaan terencana
-            </p>
-        </div>
-    </div>    
-{% endblock %}
+<!-- templates/help/help_PmPdm.html -->
+{% block body %}
+    <div class="container-fluid">
+        <div class="row">
+            <!---Left side of page, occupay 2 of 12 coulumn-->
+            <div class="col-sm-2">
+                {% block leftSidebar %}
+                    <div>
+                        <h2>Preventive and Predictive Maintenance</h2>
+                        <p>Module yang menangani pekerjaan terencana (time based) </p>
+                    </div>
+                {% endblock leftSidebar %}
+            </div>
+            <!---middle side of page, occupay 8 of 12 coulumn-->
+            <div class="col-sm-8">
+                {% block content %}
+                    <div>
+                        <!--Pm Pdm Start-->
+                        <h2>Preventive and Predictive Maintenance</h2>
+                        <p>
+                            Pekerjaan terencana baik berupa pencegahan, perbaikan/korektif, ataupun inspeksi berkala
+                            merupakan bagian yang terpenting dari sebuah sisitem perawatan. Dengan tindakan ini tercegah
+                            atau setidaknya mengurangi aset tidak berfungsi secara mendadak (break down). Penerapan pekerjaan
+                            terencana berdasar pada resiko yang dipikul oleh masing-masing aset (risk based).
+                            Aset yang mengakibatkan issue lingkungan, keselamatan serta keberlangsungan operasi bisnis harus
+                            mendapatkan perlakukan yang berbeda.
+                            Dalam module ini dilakukan beberapa fungsi sbb:
+                        </p>
+                        <ul>
+                            <li>
+                                Set-up dan konfigurasi 
+                            </li>
+                            <li>
+                                Scheduling
+                            </li>
+                            <li>
+                                Automatic Work Order
+                            </li>
+                            <li>
+                                Action reporting
+                            </li>
+                        </ul>
+                        <!--Pm Pdm End-->
+                    </div>
+                {% endblock %}
+            </div>
+            <!---Right side of page, occupay 2 of 12 coulumn-->
+            <div class="col-sm-2">
+                {% block rightSidebar %}
+                    <div>
+                        <h2>PM PdM Modules</h2>
+                        <p>
+                            Setup dan konfigurasi pekerjaan terencana
+                        </p>
+                    </div>
+                {% endblock rightSidebar %}
+            </div>
+        </div>    
+    </div>
+{% endblock body %}
