--- a/help/templates/help_reporting.html
+++ b/help/templates/help_reporting.html
@@ -1,61 +1,71 @@
-{% block content %}
-    <style>
-        ul {
-            padding: 0px 0px 0px 50px;
-        }
-    </style>
-
-    <div class="row">
-        <div class="column side">
-            <h2>Reporting</h2>
-            <p>Module yang menangani Reporting</p>
-        </div>
-        
-        <div class="column middle">
-            <!--Reporting Start-->
-            <h2>Reporting</h2>
-            <p>
-                Under construction
-            </p>
-            <ul>
-                <li>
-                    List item
-                </li>
-                <li>
-                    List item
-                </li>
-                <li>
-                    List item
-                </li>
-                <li>
-                    List item
-                </li>
-                <li>
-                    List item
-                </li>
-            </ul>
-            <!--Reporting End-->
-        </div>
-
-        <div class="column side">
-            <h2>Reporting Modules</h2>
-            <p>
-                Under construction
-            </p>
-            <ul>
-                <li>
-                    List side item
-                </li>
-                <li>
-                    List side item
-                </li>
-                <li>
-                    List side item
-                </li>
-                <li>
-                    List side item
-                </li>
-            </ul>
-        </div>
-    </div>    
-{% endblock %}
+<!-- templates/help/help_reporting.html -->
+{% block body %}
+    <div class="container-fluid">
+        <div class="row">
+            <!---Left side of page, occupay 2 of 12 coulumn-->
+            <div class="col-sm-2">
+                {% block leftSidebar %}
+                    <div>
+                        <h2>Reporting</h2>
+                        <p>Module yang menangani Reporting</p>
+                    </div>
+                {% endblock leftSidebar %}
+            </div>
+            <!---middle side of page, occupay 8 of 12 coulumn-->
+            <div class="col-sm-8">
+                {% block content %}
+                    <div>
+                        <!--Reporting Start-->
+                        <h2>Reporting</h2>
+                        <p>
+                            Under construction
+                        </p>
+                        <ul>
+                            <li>
+                                List item
+                            </li>
+                            <li>
+                                List item
+                            </li>
+                            <li>
+                                List item
+                            </li>
+                            <li>
+                                List item
+                            </li>
+                            <li>
+                                List item
+                            </li>
+                        </ul>
+                        <!--Reporting End-->
+                    </div>
+                {% endblock %}
+            </div>
+            <!---Right side of page, occupay 2 of 12 coulumn-->
+            <div class="col-sm-2">
+                {% block rightSidebar %}
+                    <div>
+                        <h2>Reporting Modules</h2>
+                        <p>
+                            Under construction
+                        </p>
+                        <ul>
+                            <li>
+                                List side item
+                            </li>
+                            <li>
+                                List side item
+                            </li>
+                            <li>
+                                List side item
+                            </li>
+                            <li>
+                                List side item
+                            </li>
+                        </ul>
+                    </div>
+                {% endblock rightSidebar %}
+            </div>
+        </div>    
+    </div>
+{% endblock body %}
