--- a/work_order/templates/base_work_order.html
+++ b/work_order/templates/base_work_order.html
@@ -1,35 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        {% block title %}<!-- insert title for every page -->{% endblock %}
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!-- templates/help/base_work_order.html -->
+{% extends "base_cmms.html" %}
+{% load crispy_forms_tags %}
 
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> 
-        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
-        
-        <!-- Add additional CSS in static file -->
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-        <script type="text/javascript" src="{% static 'js/woMisc.js' %}"></script>
-    </head>
-    <body>
-        <div class="topnav">
-            <ul>
-                <li><a href="{% url 'home-cmms' %}">Home</a></li>
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'work_order:work_orders'%}">Work Order List</a></li>   
-                    <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
-                {% else %}
-                    <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
-                {% endif %} 
-                {% if user.is_authenticated %}
-                    <li style="float: right;">User : {{ user.get_username }}</li>
-                {% endif %} 
-            </ul>
-        </div>
-        <div>{% block content %}{% endblock %}</div>
-    </body>
-</html>
+<style>
+    ul {
+        padding: 0px 0px 0px 50px;
+    }
+</style>
+
+{% block topMenu %}
+<div class="topnav">
+    <ul>
+        <li><a href="{% url 'home-cmms' %}">Home</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'work_order:work_orders'%}">Work Order List</a></li>   
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+        {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+        {% endif %} 
+        {% if user.is_authenticated %}
+            <li style="float: right;">User : {{ user.get_username }}</li>
+        {% endif %} 
+    </ul>
+</div>
+{% endblock topMenu %}
