--- a/work_order/templates/work_order/WoReport_form.html
+++ b/work_order/templates/work_order/WoReport_form.html
@@ -1,7 +1,7 @@
 {% extends "base_work_order.html" %}
 
 {% block title %}
-    <title>Wo Report</title>
+    Wo Report
 {% endblock %}
 
 {% block content %}
