--- a/work_order/templates/work_order/home.html
+++ b/work_order/templates/work_order/home.html
@@ -2,7 +2,7 @@
 {% extends "base_work_order.html" %}
 
 {% block title %}
-    <title>Work Order Home</title>
+    Work Order Home
 {% endblock %}
 
 {% block body %}
