--- a/work_order/templates/work_order/user_work_order_list.html
+++ b/work_order/templates/work_order/user_work_order_list.html
@@ -1,5 +1,9 @@
 {% extends "base_work_order.html" %}
 
+{% block title %}
+    Work order list
+{% endblock %}
+
 {% block content %}
   <h3>Work Order List</h3>
   {% if user_work_order_list %}
