--- a/work_order/templates/work_order/WoInstruction_form.html
+++ b/work_order/templates/work_order/WoInstruction_form.html
@@ -1,27 +1,15 @@
 {% extends "base_work_order.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
-    <title>Wo Instruction</title>
+    Wo Instruction
 {% endblock %}
 {% block content %}
 
   <!--For Work order request-->
   {% include 'Wo_request.html' %}
 
-  <form action="" method="post">
-    {% csrf_token %}
-    <table class="WoForm">
-      <caption>Work Order Instruction</caption>
-      <thead>
-        <tr>
-          <th scope="col">Item</th>
-          <th scope="col">Data</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{ form.as_table }}
-      </tbody>
-    </table>
-    <input type="submit" value="Submit">
-  </form>
+  <hr>
+
+  {% crispy form %}
 {% endblock %}
