--- a/work_order/templates/work_order/WoJournal_form.html
+++ b/work_order/templates/work_order/WoJournal_form.html
@@ -1,4 +1,5 @@
 {% extends "base_work_order.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     <title>Wo Forwader</title>
@@ -8,20 +9,7 @@
   <!--For Work order request-->
   {% include 'Wo_request.html' %}
 
-  <form action="" method="post">
-    {% csrf_token %}
-    <table class="WoForm">
-      <caption>Work Order Forwarder</caption>
-      <thead>
-        <tr>
-          <th scope="col">Item</th>
-          <th scope="col">Data</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{ form.as_table }}
-      </tbody>
-    </table>
-    <input type="submit" value="Submit">
-  </form>
+  <hr>
+
+  {% crispy form %}
 {% endblock %}
