--- a/work_order/templates/work_order/work_order_detail.html
+++ b/work_order/templates/work_order/work_order_detail.html
@@ -1,7 +1,7 @@
 {% extends "base_work_order.html" %}
 
 {% block title %}
-    <title>Wo Detail</title>
+    Wo Detail
 {% endblock %}
 
 {% block content %}
