--- a/work_order/templates/work_order/work_order_form.html
+++ b/work_order/templates/work_order/work_order_form.html
@@ -1,25 +1,16 @@
 {% extends "base_work_order.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
-    <title>Work Order Create</title>
+    Work Order Create
 {% endblock %}
 {% block content %}
   <h3>Work Order Create</h3>
 
   <p><strong>WO Number:</strong> {{ wo_number }}, <strong>Date:</strong> {{ date_open }}</p>
   <p><strong>Originator:</strong> {{ originator }}</p>
+  <hr>
 
-  <form action="" method="post">
-    {% csrf_token %}
-    <table class="WoForm">
-      <thead>
-        <tr>
-          <th scope="col">Item</th>
-          <th scope="col">Data</th>
-        </tr>
-      </thead>
-      {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit">
-  </form>
+  {% crispy form %}
 {% endblock %}
+
