--- a/equipment/templates/equipment/home.html
+++ b/equipment/templates/equipment/home.html
@@ -1,7 +1,7 @@
-{% extends "base_cmms.html" %}
+{% extends "base_equipment.html" %}
 
 {% block title %}
-    <title>cmms equipment</title>
+    cmms equipment
 {% endblock %}
 
 {% block content %}
