--- a/templates/cmms_pon/home.html
+++ b/templates/cmms_pon/home.html
@@ -1,7 +1,7 @@
 {% extends "base_cmms.html" %}
 
 {% block title %}
-    <title>cmms home</title>
+    cmms home
 {% endblock %}
 {% block content %}
 
