--- a/help/templates/help/utility.html
+++ b/help/templates/help/utility.html
@@ -4,7 +4,30 @@
 {% block title %}CMMS Help Utility{% endblock %}
 
 {% block body %}
-  <!--get from help-->
-  {% include 'help_utility.html' %}
+  <div class="container-fluid">
+    <div class="row">
+        <!---Left side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block leftSidebar %}
+                <div>
+                    <h2>Utility</h2>
+                    <p>Module yang menangani Utility</p>
+                </div>
+            {% endblock leftSidebar %}
+        </div>
+        <!---middle side of page, occupay 8 of 12 coulumn-->
+        <div class="col-sm-8">
+            {% block content %}
+              {% include 'help/includes/utilityDescription.html' %}
+            {% endblock %}
+        </div>
+        <!---Right side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block rightSidebar %}
+              {% include 'help/includes/utilityFeature.html' %}
+            {% endblock rightSidebar %}
+        </div>
+    </div>    
+  </div>
 {% endblock body %}
 
