--- a/help/templates/help/workOrder.html
+++ b/help/templates/help/workOrder.html
@@ -3,7 +3,29 @@
 {% block title %}CMMS Help Work Order{% endblock %}
 
 {% block body %}
-  <!--get from help-->
-  {% include 'help_workOrder.html' %}
+<div class="container-fluid">
+  <div class="row">
+      <!---Left side of page, occupay 2 of 12 coulumn-->
+      <div class="col-sm-2">
+          {% block leftSidebar %}
+              <div>
+                <h2>Work Order</h2>
+                <p>Module yang menangani permintaan pekerjaan</p>
+              </div>
+          {% endblock leftSidebar %}
+      </div>
+      <!---middle side of page, occupay 8 of 12 coulumn-->
+      <div class="col-sm-8">
+          {% block content %}
+            {% include 'help/includes/workOrderDescription.html' %}
+          {% endblock %}
+      </div>
+      <!---Right side of page, occupay 2 of 12 coulumn-->
+      <div class="col-sm-2">
+          {% block rightSidebar %}
+            {% include 'help/includes/workOrderFeature.html' %}
+          {% endblock rightSidebar %}
+      </div>
+  </div>    
 {% endblock body %}
 
