--- a/pm_pdm/templates/pm_pdm/home.html
+++ b/pm_pdm/templates/pm_pdm/home.html
@@ -3,10 +3,31 @@
 {% block title %}
     <title>cmms pm_ppdm</title>
 {% endblock %}
-{% block content %}
-  <!--get from help-->
-  {% include 'help_PmPdm.html' %}
+{% block body %}
+  <div class="container-fluid">
+    <div class="row">
+        <!---Left side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block leftSidebar %}
+                <div>
+                    <h2>Preventive and Predictive Maintenance</h2>
+                    <p>Module yang menangani pekerjaan terencana (time based) </p>
+                </div>
+            {% endblock leftSidebar %}
+        </div>
+        <!---middle side of page, occupay 8 of 12 coulumn-->
+        <div class="col-sm-8">
+            {% block content %}
+              {% include 'help/includes/pm_pdmDescription.html' %}
+            {% endblock %}
+        </div>
+        <!---Right side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block rightSidebar %}
+              {% include 'help/includes/pm_pdmFeature.html' %}
+            {% endblock rightSidebar %}
+        </div>
+    </div>    
+  </div>
+{% endblock body %}
 
-  <h3>cmms pm_ppdm System</h3>
-  <p>Under Construction</p>
-{% endblock %}
