--- a/reporting/templates/reporting/home.html
+++ b/reporting/templates/reporting/home.html
@@ -3,10 +3,31 @@
 {% block title %}
     <title>cmms reporting</title>
 {% endblock %}
-{% block content %}
-  <!--get from help-->
-  {% include 'help_reporting.html' %}
+{% block body %}
+  <div class="container-fluid">
+    <div class="row">
+        <!---Left side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block leftSidebar %}
+                <div>
+                    <h2>Reporting</h2>
+                    <p>Module yang menangani Reporting</p>
+                </div>
+            {% endblock leftSidebar %}
+        </div>
+        <!---middle side of page, occupay 8 of 12 coulumn-->
+        <div class="col-sm-8">
+            {% block content %}
+              {% include 'help/includes/reportingDesription.html' %}
+            {% endblock %}
+        </div>
+        <!---Right side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block rightSidebar %}
+              {% include 'help/includes/reportingFeature.html' %}
+            {% endblock rightSidebar %}
+        </div>
+    </div>    
+  </div>
+{% endblock body %}
 
-  <h3>cmms reporting System</h3>
-  <p>Under Construction</p>
-{% endblock %}
