--- a/templates/cmms_pon/home.html
+++ b/templates/cmms_pon/home.html
@@ -3,9 +3,32 @@
 {% block title %}
     cmms home
 {% endblock %}
-{% block content %}
 
-  <!--get from help-->
-  {% include 'help_cmms.html' %}
+{% block body %}
+  <div class="container-fluid">
+    <div class="row">
+        <!---Left side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block leftSidebar %}
+                <div>
+                    <h2>CMMS</h2>
+                    <p>Computer Maintenance Management System</p>
+                </div>
+            {% endblock leftSidebar %}
+        </div>
+        <!---middle side of page, occupay 8 of 12 coulumn-->
+        <div class="col-sm-8">
+            {% block content %}
+              {% include 'help/includes/cmmsDescription.html' %}
+            {% endblock %}
+        </div>
+        <!---Right side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block rightSidebar %}
+              {% include 'help/includes/cmmsFeature.html' %}
+            {% endblock rightSidebar %}
+        </div>
+    </div>    
+  </div>
+{% endblock body %}
 
-{% endblock %}
