--- a/utility/templates/utility/home.html
+++ b/utility/templates/utility/home.html
@@ -3,21 +3,39 @@
 {% block title %}
     <title>cmms utility</title>
 {% endblock %}
-{% block content %}
-  <!--get from help-->
-  {% include 'help_equipment.html' %}
 
-    <div class="column middle">
-        <h2>Utility Modules</h2>
-        <p>
-            Penanganan setup organisasi, user serta keterkaitanya dengan system CMMS
-        </p>
-        <ul>
-            <li><a href="{% url 'admin:index'%}">Admin Index</a></li>   
-            <li><a href="{% url 'admin:accounts_department_add'%}">Registrasi Department</a></li>   
-            <li><a href="{% url 'admin:accounts_section_add'%}">Registrasi Section</a></li>   
-            <li><a href="{% url 'admin:accounts_action_add'%}">Registrasi Work Order Status</a></li>   
-            <li><a href="{% url 'utility:config-import'%}">Configuration from File</a></li>   
-        </ul>
-    </div>
-{% endblock %}
+{% block body %}
+  <div class="container-fluid">
+    <div class="row">
+        <!---Left side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block leftSidebar %}
+                <div>
+                    <h2>Utility</h2>
+                    <p>Module yang menangani Utility</p>
+                    <ul>
+                        <li><a href="{% url 'admin:index'%}">Admin Index</a></li>   
+                        <li><a href="{% url 'admin:accounts_department_add'%}">Registrasi Department</a></li>   
+                        <li><a href="{% url 'admin:accounts_section_add'%}">Registrasi Section</a></li>   
+                        <li><a href="{% url 'admin:accounts_action_add'%}">Registrasi Work Order Status</a></li>   
+                        <li><a href="{% url 'utility:config-import'%}">Configuration from File</a></li>   
+                    </ul>
+                </div>
+            {% endblock leftSidebar %}
+        </div>
+        <!---middle side of page, occupay 8 of 12 coulumn-->
+        <div class="col-sm-8">
+            {% block content %}
+              {% include 'help/includes/utilityDescription.html' %}
+            {% endblock %}
+        </div>
+        <!---Right side of page, occupay 2 of 12 coulumn-->
+        <div class="col-sm-2">
+            {% block rightSidebar %}
+              {% include 'help/includes/utilityFeature.html' %}
+            {% endblock rightSidebar %}
+        </div>
+    </div>    
+  </div>
+{% endblock body %}
+
