--- a/work_order/templates/work_order/home.html
+++ b/work_order/templates/work_order/home.html
@@ -30,69 +30,13 @@
             <!---middle side of page, occupay 8 of 12 coulumn-->
             <div class="col-sm-8">
                 {% block content %}
-                    <div>
-                        <!--Work Order Start-->
-                        <h2>Work Order</h2>
-                        <p>
-                            Tindakan perbaikan/korektif terhadap aset yang menunjang bisnis dapat
-                            dilakukan dengan melakukan permintaan pekerjaan terkait dengan kondisi 
-                            aset. Tindakan perbaikan ini guna menjaga unjuk kerja dari aset agar tetap terjaga
-                            ssesuai name plate-nya. Tindakan perbaikan ini dapat bersumber dari pengguna aset
-                            (produksi), ataupun internal dari hasil inspeksi. Selain itu, permintaan pekerjaan 
-                            juga dapat secara otomatis diterbitkan oleh program terkait dengan jadwal pemeliharaan
-                            terencana (Preventive dan Predictive Maintenane) termasuk didalamnya adalah jadwal kalibrasi.
-                            Penanganan permintaan pekerjaan ini meliputi jam kerja normal dan waktu libur.
-                            Dalam module ini ada bebera fungsi sbb:
-                        </p>
-                        <ul>
-                            <li>
-                                Membuat/membuka permintaan pekerjaan
-                            </li>
-                            <li>
-                                Melakukan pemeriksaan serta menyetujui work order
-                            </li>
-                            <li>
-                                Melakukan pelacakan
-                            </li>
-                            <li>
-                                Menuliskan kegiatan, serta sumber daya yang diperlukan
-                            </li>
-                        </ul>
-                        <!--Work Order End-->
-                        {% load static %}
-
-                        <h5>Work Order Flow Chart</h5>
-                        <!--Make sure to file's name and ext are exactly same -->
-                        <img src="{% static 'help/images/WoFlowChart.PNG' %}" 
-                        alt="WoFlowChart" 
-                        width="80%" height="40%" >    
-                    </div>
-                {% endblock %}
+                    {% include 'help/includes/workOrderDescription.html' %}
+                <!---Right side of page, occupay 2 of 12 coulumn-->
+                {% endblock content %}
             </div>
-            <!---Right side of page, occupay 2 of 12 coulumn-->
             <div class="col-sm-2">
                 {% block rightSidebar %}
-                    <div>
-                        <h2>Work Order Modules</h2>
-                        <p>
-                            Penanganan permintaan mulai dari opening, approval, koreksi, pelaksanaan,
-                            sampai pada penutupan (closing)
-                        </p>
-                        <ul>
-                            <li>
-                                Flow Chart Approval
-                            </li>
-                            <li>
-                                Status Work Order
-                            </li>
-                            <li>
-                                Pending item
-                            </li>
-                            <li>
-                                Summary
-                            </li>
-                        </ul>
-                    </div>
+                    {% include 'help/includes/workOrderFeature.html' %}
                 {% endblock rightSidebar %}
             </div>
         </div>    
