--- a/help/templates/help/includes/pm_pdmFeature.html
+++ b/help/templates/help/includes/pm_pdmFeature.html
@@ -1,7 +1,7 @@
 <!--PM PdM Start-->
 <h2>Feature</h2>
 <p>
-    Module PPdM adalah module yang menangani Preventive dan Predictive Maintenance termasuk di dalamnya kalibrasi, 
+    Module PM PdM adalah module yang menangani Preventive dan Predictive Maintenance termasuk di dalamnya kalibrasi, 
     meliputi hal-hal berikut ini :
 </p>
 <ul>
@@ -15,7 +15,7 @@
         Automatic Work Order
     </li>
     <li>
-        Action reporting
+        Reporting
     </li>
 </ul>
 <!--PM PdM End-->
